# 241-327_Kazarinov

lab1/: docker-compose.yaml
lab1/backend/: Dockerfile  requirements.txt
lab1/backend/lab1/: settings.py
lab1/backend/mainapp/: requests.http
lab1/lab3/: CMakeLists.txt  httpclient.cpp  httpclient.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  restadapter.cpp  restadapter.h  restaurant.h
lab1/mainapp/: requests.http  views.py
lab1/nginx/: Dockerfile
lab1/nginx/certs/: lab2.crt  lab2.csr  lab2.key  root.crt  root.key  root.srl
lab1/nginx/templates/: default.conf.template
lab1_backup/lab1/: settings.py  urls.py
lab1_backup/mainapp/: gentestdata.py  models.py
lab1_backup/mainapp/migrations/: 0001_initial.py
